--- a/portfolio-styles.css
+++ b/portfolio-styles.css
@@ -179,8 +179,8 @@ body {
 /* Windows */
 .window-container, .gallery-window, .readme-window {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: calc(50% + 24px);
+    left: calc(50% + 24px);
     transform: translate(-50%, -50%);
     z-index: 100;
     display: none;
